# reforis-diagnostics

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  babel.cfg  package-lock.json  pylintrc  pyproject.toml  setup.py
js/: package-lock.json  package.json  webpack.config.js
js/src/: API.js  app.js
js/src/diagnostics/: Diagnostics.js  Modules.js  ModulesForm.js  ReportsTable.js  hooks.js
js/src/diagnostics/__tests__/: Diagnostics.test.js  Modules.test.js  ReportsTable.test.js
reforis_diagnostics/: __init__.py  utils.py
reforis_diagnostics/templates/: diagnostics.html
reforis_diagnostics/translations/: messages.pot
reforis_diagnostics/translations/cs/LC_MESSAGES/: messages.po
reforis_diagnostics/translations/da/LC_MESSAGES/: messages.po
reforis_diagnostics/translations/de/LC_MESSAGES/: messages.po
reforis_diagnostics/translations/el/LC_MESSAGES/: messages.po
reforis_diagnostics/translations/en/LC_MESSAGES/: messages.po
reforis_diagnostics/translations/es/LC_MESSAGES/: messages.po
reforis_diagnostics/translations/fi/LC_MESSAGES/: messages.po
reforis_diagnostics/translations/fo/LC_MESSAGES/: messages.po
reforis_diagnostics/translations/fr/LC_MESSAGES/: messages.po
reforis_diagnostics/translations/hr/LC_MESSAGES/: messages.po
reforis_diagnostics/translations/hu/LC_MESSAGES/: messages.po
reforis_diagnostics/translations/it/LC_MESSAGES/: messages.po
reforis_diagnostics/translations/ja/LC_MESSAGES/: messages.po
reforis_static/: __init__.py
tests/: conftest.py  test_modules.py  test_reports.py  utils.py
(+14 files in other folders)
